--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/bigNoseGame")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="bigNoseGameGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/maps/testin/test.test
+GameDefaultMap=/Game/Maps/maps/testin/test.test
+GlobalDefaultGameMode=/Game/Blueprints/essentials/GameModes/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Script/bigNoseGame.kusaGameInstance
+
