--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,3 +17,6 @@ GameDefaultMap=/Game/Maps/maps/testin/test.test
 GlobalDefaultGameMode=/Game/Blueprints/essentials/GameModes/BP_GameMode.BP_GameMode_C
 GameInstanceClass=/Script/bigNoseGame.kusaGameInstance
 
+[/Script/Engine.RendererSettings]
+r.CustomDepth=3
+
