--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,6 +83,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="yAxis",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="forward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="walking",Scale=1.000000,Key=LeftShift)
++AxisMappings=(AxisName="test",Scale=1.000000,Key=J)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
