--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="xAxis",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="yAxis",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="forward",Scale=1.000000,Key=W)
